namespace Mvp.Core.Features.Generation;

public enum GenerationKind
{
    Solution,
    Api,
    Core,
    Infrastructure,
    App,
    ApiLibrary,
    ComponentsLibrary,
    DomainLibrary,
}
