@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
title Class structure — Generate a solution part

enum GenerationKind {
  Solution
  Api
  Core
  Infrastructure
  App
  ApiLibrary
  ComponentsLibrary
  DomainLibrary
}
class GenerationRequest {
  +Kind: GenerationKind
  +Name: string
  +OutputRoot: string
  +Force: bool
  +UseAngularCli: bool
}
class GenerationResult
interface IIncrementalGenerator {
  +GenerateAsync(request: GenerationRequest, cancellationToken): Task<GenerationResult>
}
class IncrementalGenerator
interface ITransactionalGenerationOutput
interface IProcessRunner
class SafeFileWriter

GenerationRequest --> GenerationKind
IIncrementalGenerator <|.. IncrementalGenerator
IncrementalGenerator --> GenerationRequest : consumes
IncrementalGenerator ..> GenerationResult : returns
IncrementalGenerator --> ITransactionalGenerationOutput : commits through
IncrementalGenerator --> IProcessRunner : explicit app opt-in
IncrementalGenerator ..> SafeFileWriter : renders through
@enduml
